--- a/views/tmpl/admin/contact.html
+++ b/views/tmpl/admin/contact.html
@@ -114,4 +114,39 @@
 			</div>			
 		</div>
 	</div>
+
+	<!--  Chat with Elika  -->
+	<div class="cahtdiv ng-scope">
+    <div class="chat-title">Ask an Expert  <span>X</span></div>
+    <div class="chatbody">
+        <div class="chatuser">
+            <ul class="list-unstyled list-inline">
+                <li>Your Question</li>
+                <li><span>4:30</span><span>12 june 2017</span></li>
+            </ul>
+            <div class="chattext">
+                <div class="subject"><span>Subject :</span>Door</div>
+                <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+            </div>
+        </div>
+        <div class="chatreply">
+            <ul class="list-unstyled list-inline">
+                <li><span>4:30</span><span>12 june 2017</span></li>
+                <li>Elika</li>
+            </ul>
+            <div class="chattext">
+                <div class="subject"><span>Subject :</span>Bike Gear</div>
+                <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+            </div>
+        </div>
+    </div>
+     <div class="chatfooter">
+         <p>Your Question</p>
+         <form class="formsend ng-pristine ng-valid">
+           
+             <input type="text" name="" value="" class="form-control" placeholder="Type Your Question">
+             <button type="button"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
+         </form>
+     </div>
+</div>
 </div>
