--- a/views/tmpl/admin/dashboard.html
+++ b/views/tmpl/admin/dashboard.html
@@ -6,10 +6,11 @@
 					<div class="bg-dashboard dashboardbg">
 						<div class="bg-transparent">
 							<div class="crystalcove">
-								<div class="covertext">
-									<span>
+								<div class="covertext elika-facility-dashboard">
+									<!-- <span>
 										<strong>Crystal Cove</strong> Newport Coast
-									</span>
+									</span> -->
+									<!-- <elika-facility></elika-facility> -->
 								</div>
 							</div>
 							<div class="myshortcuts">
