--- a/views/tmpl/admin/door/doors.html
+++ b/views/tmpl/admin/door/doors.html
@@ -1,6 +1,7 @@
 <div class="page page-users">
 	<div class="pageheader backpage">
 		<a href back-button><i class="fa fa-arrow-left"></i> Back</a>
+		<div class="facility-view elika-facility-name"></div>
 	</div>
 
 	<div class="pagecontent">
@@ -42,8 +43,8 @@
 														<input type="text" name="" id="" class="form-control" ng-model="door.name" placeholder="" maxlength="30" required>
 													</div>
 													<div class="form-group col-sm-6 col-md-6 last">
-														<label for="">Facility <span class="text-danger">*</span></label><br/>
-														<select class="form-control" ng-model="door.facility_id" ng-init="door.facility_id = facilityId" ng-options="item.facility_id as item.facility_name for item in facilityList"
+														<label for="">Facility {{door.facility_id}}<span class="text-danger">*</span></label><br/>
+														<select class="form-control" ng-disabled="facility_disable" ng-model="door.facility_id"  ng-options="item.facility_id as item.facility_name for item in facilityList"
 														 required>
 															<option value="">Select</option>
 														</select>
