--- a/views/tmpl/admin/schedule/add-schedule.html
+++ b/views/tmpl/admin/schedule/add-schedule.html
@@ -1,6 +1,7 @@
 <div class="page page-profile">
 	<div class="pageheader backpage">		
 		<a href back-button><i class="fa fa-arrow-left"></i> Back</a>
+		<div class="facility-view elika-facility-name"></div>
 	</div>
 	
 	<div class="pagecontent">
