--- a/views/tmpl/admin/camera/camera-dvr.html
+++ b/views/tmpl/admin/camera/camera-dvr.html
@@ -191,7 +191,7 @@
 												<div class="col-sm-12 col-md-9 col-centered ">
 													<div class="col-sm-3 col-md-3 ">
 														<label for=" ">Facility <span class="text-danger">*</span></label><br/>
-														<select class="form-control " ng-model="recordedFeedsSearchObj.facility" ng-options="facility.facility_id as facility.facility_name for facility in facilityList track by facility.facility_id">
+														<select class="form-control" ng-disabled="facility_disable" ng-model="recordedFeedsSearchObj.facility" ng-options="facility.facility_id as facility.facility_name for facility in facilityList track by facility.facility_id">
 															<option value="">Select Facility</option>
 
 														</select>
