--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -51,7 +51,7 @@
 																	</div>
 																	<div class="form-group col-sm-12 col-md-12">
 																		<label for="">Facility <span class="text-danger">*</span></label><br/>
-																		<select class="form-control" ng-model="userGroup.facility_id" ng-options="item.facility_id as item.facility_name for item in facilityList">
+																		<select class="form-control"  ng-model="userGroup.facility_id" ng-options="item.facility_id as item.facility_name for item in facilityList" ng-disabled="facility_disable">
 																			<option value="">Select</option>
 																		</select>
 																	</div>
