--- a/views/tmpl/admin/camera/camera-dvr.html
+++ b/views/tmpl/admin/camera/camera-dvr.html
@@ -178,6 +178,13 @@
 
 														</div>
 													</div>
+													<div ng-init="getDoorList(camera.camera_id)" style=" display: inline;">
+														<select ng-model="camera.selectedDoor" name="device_model+'camera.camera_id'" class="form-control" style=" float: left; width: 85%; margin-top: 10px;">
+															<option value="" disabled>Select Door To Open</option>
+															<option ng-repeat="door in getCameraDoor(camera.camera_id)" ng-value="door.door_id">{{door.door_name}}</option>															
+														</select>
+														<button type="button" ng-click="openDoor(camera.selectedDoor);" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10" style="float: right; margin-right: 10px; margin-bottom: 10px;">Open Door</button>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -198,8 +205,7 @@
 													<div class="col-sm-3 col-md-3 " ng-controller="DatepickerDemoCtrl ">
 														<label for=" ">Date <span class="text-danger">*</span></label>
 														<div class="input-group ">
-															<input type="text " class="form-control " uib-datepicker-popup="{{format}} "  ng-model="recordedFeedsSearchObj.dt "
-															 is-open="opened
+															<input type="text " class="form-control " uib-datepicker-popup="{{format}} " ng-model="recordedFeedsSearchObj.dt " is-open="opened
 												 " datepicker-options="dateOptions " ng-required="true " close-text="Close " />
 															<span class="input-group-btn ">
 																<button type="button " class="btn btn-default " ng-click="open($event) " style="padding: 8px 14px;
