--- a/views/tmpl/signup.html
+++ b/views/tmpl/signup.html
@@ -10,7 +10,7 @@
 	<div class="page page-core page-login core-new">
 		<div id="hpopup" class="container signup p-40 bg-white text-center login-box-shadow borderradius6">
 			<h2 class="login-h2 text-greensea">Create a new account</h2>
-			<form name="form" class="form-validation mt-20" ng-validate="validationOptions" id="signup_form" name="signup_form" ng-submit="submitSignUpForm(user,signup_form)">
+			<form class="form-validation mt-20" ng-validate="validationOptions" id="signup_form" name="signup_form" ng-submit="submitSignUpForm(user,signup_form)">
 				<div class="overflow">
 					<input type="text" class="form-control underline-input" placeholder="First Name" ng-model="user.first_name" required>					
 					<input type="text" class="form-control underline-input" placeholder="Last Name" ng-model="user.last_name" required>					
