Added credential schedule

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -6,6 +6,8 @@
 	line-height: 33px;
 	margin-bottom: 10px;
 }
+.schedule_scroll{width: 470px; overflow-x: auto;}
+#scheduler_here{width: 750px;}
 
 .refreshbtn {
 	position: absolute;
@@ -3709,6 +3711,8 @@ span.edittxt {position: absolute;
 	.signup .negmargin40 {
 		margin: 0px -30px -30px;
 	}
+
+
 }
 
 @media only screen and (max-width: 599px) {
@@ -3873,6 +3877,7 @@ span.edittxt {position: absolute;
 		float: left;
 		width: 70%!important;
 	}
+    .schedule_scroll{width: 300px;}
 	
 }
 
@@ -3909,3 +3914,6 @@ span.edittxt {position: absolute;
 .dhtmlx-alert{
         z-index: 1050 !important;
 }
+/*.modal-dialog {
+    width: 800px !important;
+}*/
