--- a/views/tmpl/signup.html
+++ b/views/tmpl/signup.html
@@ -12,23 +12,23 @@
 			<h2 class="login-h2 text-greensea">Create a new account</h2>
 			<form class="form-validation mt-20" ng-validate="validationOptions" id="signup_form" name="signup_form" ng-submit="submitSignUpForm(user,signup_form)">
 				<div class="overflow">
-					<input type="text" class="form-control underline-input" placeholder="First Name" ng-model="user.first_name" required>					
-					<input type="text" class="form-control underline-input" placeholder="Last Name" ng-model="user.last_name" required>					
+					<input type="text" name="firstname" class="form-control underline-input" placeholder="First Name" ng-model="user.first_name" required>					
+					<input type="text" name="lastname" class="form-control underline-input" placeholder="Last Name" ng-model="user.last_name" required>					
 				</div>
 				
 				<div class="overflow">
-					<input type="email" class="form-control underline-input" placeholder="Email Address" ng-model="user.email" required>					
-					<input type="text" class="form-control underline-input" ui-mask="999 999 9999" placeholder="Phone Number" ng-model="user.phone" ui-mask-placeholder-char="space" required>
+					<input type="email" name="email" class="form-control underline-input" placeholder="Email Address" ng-model="user.email" required>					
+					<input type="text" name="phonenumber" class="form-control underline-input" ui-mask="999 999 9999" placeholder="Phone Number" ng-model="user.phone" ui-mask-placeholder-char="space" required>
 				</div>
 				
 				<div class="overflow">
-					<input type="text" class="form-control underline-input" placeholder="Address" ng-model="user.address" required>
-					<input type="text" minlength="4" maxlength="6" class="form-control underline-input" placeholder="Zip Code" ng-model="user.zipcode" required>
+					<input type="text" name="address" class="form-control underline-input" placeholder="Address" ng-model="user.address" required>
+					<input type="text" name="zipcode" minlength="4" maxlength="6" class="form-control underline-input" placeholder="Zip Code" ng-model="user.zipcode" required>
 				</div>
 				
 				<div class="overflow">
-					<input type="password" minlength="8" placeholder="Password" class="form-control underline-input" ng-model="user.password" required>
-					<input type="password" minlength="8" placeholder="Confirm Password" class="form-control underline-input" ng-model="user.confirm_password" required>
+					<input type="password" name="password" placeholder="Password" class="form-control underline-input" ng-model="user.password" required>
+					<input type="password" name="cpassword" placeholder="Confirm Password" class="form-control underline-input" ng-model="user.confirm_password" required>
 				</div>
 				
 				<div class="overflow">
@@ -52,7 +52,7 @@
 							<option value=15 label="What was your high school mascot?">What was your high school mascot?</option> -->
 						</select>
 					</div>
-					<input type="text" class="form-control underline-input" placeholder="Answer" ng-model="user.secret_ans" required>
+					<input type="text" name="answer" class="form-control underline-input" placeholder="Answer" ng-model="user.secret_ans" required>
 				</div>
 				
 				<div class="form-group text-left signuplabel" style="margin-left: 30px; margin-top: -15px;">        
