--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -217,6 +217,10 @@
 												<h2 class="md-title">{{ device.device_name }}</h2>
 												<p>{{ device.device_model }}</p>
 												<p>Dependent {{ device.device_slave_count }}</p>
+												<p ng-hide="class == 'gridview'">Serial No: {{ device.device_serial_no }}</p>
+												<p ng-hide="class == 'gridview'">Facility Name: {{ device.device_facility_name }}</p>
+												<p ng-hide="class == 'gridview'">Device Health: {{ device.device_health }}</p>
+												<p ng-hide="class == 'gridview'">Device Type: {{ device.device_type | uppercase }}</p>
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
 												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.device.view-device({device_id:device.device_id})">View</a>
